fix gap inside catalog flex elements

--- a/frontend/src/components/catalog/SearchBar.scoped.scss
+++ b/frontend/src/components/catalog/SearchBar.scoped.scss
@@ -3,7 +3,7 @@
 .search-bar-wrapper {
   display: flex;
   gap: 40px;
-  padding-bottom: 30px;
+  position: relative;
 
   .search-bar {
     width: 100%;
