--- a/frontend/src/components/catalog/WineList.scoped.scss
+++ b/frontend/src/components/catalog/WineList.scoped.scss
@@ -1,13 +1,12 @@
 @import "../../assets/scss/variables";
 
 .wine-list {
-  padding: 40px 0px;
   margin-right: 0px !important;
 }
 
 .no-wines {
   width: 100%;
   text-align: center;
-  font-size: 26px;
+  font-size: 18px;
   color: $primary;
 }
